--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="362076500713-61cilu3uhnbo7os0jfivq5orb8evvrb0.apps.googleusercontent.com">
     <title>Movie List</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="./resources/css/style.css">
@@ -85,8 +86,9 @@
                                             <label data-error="wrong" data-success="right" for="modalLRInput11">Password</label>
                                             <input type="password" id="password-login" class="form-control form-control-sm validate">
                                         </div>
-                                        <div class="text-center mt-2">
-                                            <button type="submit" class="btn btn-info">Log in<i class="fas fa-sign-in ml-1"></i></button>
+                                        <div class="d-flex flex-column align-items-center mt-2">
+                                            <button type="submit" class="mb-2 btn btn-info">Sign in<i class="fas fa-sign-in ml-1"></i></button>
+                                            <div class="g-signin2" data-onsuccess="onSignIn"></div>
                                         </div>
                                     </div>
                                 </form>
@@ -178,6 +180,8 @@
           
     </section>
 
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
