--- a/client/index.html
+++ b/client/index.html
@@ -87,7 +87,10 @@
                                             <input type="password" id="password-login" class="form-control form-control-sm validate">
                                         </div>
                                         <div class="d-flex flex-column align-items-center mt-2">
-                                            <button type="submit" class="mb-2 btn btn-info">Sign in<i class="fas fa-sign-in ml-1"></i></button>
+                                            <div id="btn-login">
+                                                <button style="width: 120px;"  type="submit" class="btn btn-info">Sign in<i class="fas fa-sign-in ml-1"></i></button>
+
+                                            </div>
                                             <div class="g-signin2" data-onsuccess="onSignIn"></div>
                                         </div>
                                     </div>
