--- a/client/index.html
+++ b/client/index.html
@@ -160,6 +160,11 @@
 
         </div>
 
+        <div class="cast-modal">
+
+           
+        </div>
+
         <div class="container">
             <div class="table-wrapper-scroll-y my-custom-scrollbar">
 
@@ -168,6 +173,7 @@
                     <tr>
                       <th class="border-right text-center" scope="col">No</th>
                       <th class="border-right" scope="col">Title</th>
+                      <th class="border-right" scope="col">Cast</th>
                       <th class="border-right text-center" scope="col">Rating</th>
                       <th class="border-right text-center" scope="col">Released Date</th>
                       <th class=" text-center" scope="col">Trailer</th>
